--- a/killerapp/server/package.json
+++ b/killerapp/server/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "express": "latest",
+    "cors": "latest",
     "connect": "^3.3.5",
     "serve-static": "^1.7.1",
     "socket.io": "^1.2.1",
